--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ Code for Kanazawaでは、先ずは正しいゴミの捨て方に注目しまし
 目的と使い方は、とてもシンプルです。
             <h2>目的</h2>
 「いつ、どのゴミが収集されているのか？」
-例えばお引っ越しをされた場合や、新しく金沢市に住むことになった時、このアプリを使えば、すぐに分かるようにデザインされています。
+例えばお引っ越しをされた場合や、新しく市川市に住むことになった時、このアプリを使えば、すぐに分かるようにデザインされています。
             <h2>使い方</h2>
             <h3>色でゴミのジャンルを表示</h3>
             <p>一番近いゴミの日とジャンルを上から順に表示しています。</p>
@@ -46,7 +46,11 @@ Code for Kanazawaでは、先ずは正しいゴミの捨て方に注目しまし
               <h4>提供されるゴミ情報について</h4>
               <p>金沢市が公開しているデータからCfKが独自に解析し、アプリに実装しました。</p>
               <h4>ライセンスについて</h4>
-              <p>本アプリの著作権はCode for Kanazawaに帰属します。</p>
+              <p>本アプリの著作権はCode for Ichikawa及びCode for Kanazawaに帰属します。</p>
+            </div>
+            <div id="cfi">
+              <h3>Code for Ichikawaについて</h3>
+              <p>ウェブサイト: <a href="http://codeforichikawa.org">http://codeforichikawa.org</a></p>
             </div>
             <div id="cfk">
               <h3>Code for Kanazawaについて</h3>
